--- a/resume.tex
+++ b/resume.tex
@@ -120,28 +120,28 @@
 
 \textbf{\huge Daniel Brito} \\ 
 \vspace{0.1cm} % Space between sections
-\textbf{Software Developer • Computer Scientist • Visual Artist • Writer} \\
+\textbf{Software Engineer • Visual Artist • Writer} \\
 \vspace{0.3cm} % Space between sections
 
 %----------Location and contacts-----------------
 \begin{tabular}{c c c c c}
     \faMapMarker{\hspace{0.1cm} Ceará, Brazil} & \hspace{0.45cm}
-    \faGlobe{\hspace{0.2cm}\href{https://danielbrito.github.io}{danielbrito.github.io}} & \hspace{0.45cm}
     \faEnvelope{\hspace{0.2cm}\href{mailto:danielhbrito@outlook.com}{danielhbrito@outlook.com}} & \hspace{0.45cm}
     \faLinkedin{\hspace{0.2cm}\href{https://www.linkedin.com/in/daniel-brito}{daniel-brito}} & \hspace{0.45cm}
+    \faGlobe{\hspace{0.2cm}\href{https://danielbrito.github.io}{danielbrito.github.io}} & \hspace{0.45cm}
     \faPaperPlane{\hspace{0.2cm}\href{https://t.me/danielhbrito}{danielhbrito}}
 \end{tabular}
 
-\vspace{0.5cm} % Space between sections
+\vspace{0.7cm} % Space between sections
 
 % Justifying all the content:
 \justify
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Passionate about learning, creating things, and sharing knowledge, both in the fields of Art and Technology. Currently, focusing on topics concerning usability and front-end development of web and mobile applications, but following the steps of a full-stack professional.
+Software engineer with \texttt{+}3 years of experience, passionate about challenges that involve learning, creating things, and sharing knowledge, both in the fields of Art and Technology. Currently, focusing on usability and front-end development of web and mobile applications but following the path of a full-stack professional.
 
-\vspace{0.1cm} % Space between sections
+\vspace{0.6cm} % Space between sections
 
 %-----------EXPERIENCE-----------------
 \section{\faBriefcase \hspace{0.2cm} \Large Experience}
@@ -151,35 +151,19 @@ Passionate about learning, creating things, and sharing knowledge, both in the f
         {Software Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
         {OSF Digital}{\faMapMarker \hspace{0.1cm} Quixadá, CE - Remote}
         \begin{itemize}
-            \item Development of enterprise CRM systems.
-            \item Member of the Diversity and Inclusion Committee.
+            \item Development of web and mobile applications for big companies and startups such as Caixa, Porto Seguro, and Creditas, mainly related to finance.
         \end{itemize}
     \resumeSubHeadingListEnd
     
     \vspace{-0.2cm}
-
-    % \resumeSubHeadingListStart
-    %     \resumeSubheading
-    %     {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Apr 2021}
-    %     {Pró-Hemoce Institute}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
-        
-    %     \begin{itemize}
-    %         \item Development of new features for RHeuni, a Human Resources management platform.
-    %         \begin{itemize}
-    %             \item \textbf{Back-end:} Node.js, Express, Sequelize, PostgreSQL, JWT.
-    %             \item \textbf{DevOps:} Git, GitLab.
-    %             \item \textbf{Tools:} Draw.io, Figma, DBeaver, Insomnia.
-    %         \end{itemize}
-    %     \end{itemize}
-    % \resumeSubHeadingListEnd
     
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Research Assistant Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Currently}
+        {Research Assistant Intern}{\faCalendar \hspace{0.1cm} Feb 2022 - Apr 2022}
         {Laboratory of Studies and Research in Social Economics (LEPES/USP)}{\faMapMarker \hspace{0.1cm} Ribeirão Preto, SP - Remote}
         
         \begin{itemize}
-            \item Development of a web platform addressing the issue ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood.
+            \item Developed a web platform addressing the issue of ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood, performing data analysis from CSV files and plotting charts with more understandable results.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -188,17 +172,11 @@ Passionate about learning, creating things, and sharing knowledge, both in the f
     \resumeSubHeadingListStart
         \resumeSubheading
         {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
-        {ASTEF Foundation}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
+        {ASTEF Foundation}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
         
         \begin{itemize}
-            \item Development of web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, image gallery, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end and DevOps, as well as some agile methodologies principles.
-            \begin{itemize}
-                \item \textbf{Mobile:} Android, Java, Retrofit, Realm.
-                \item \textbf{Front-end:} ReactJS, TypeScript, Material UI, Redux.
-                \item \textbf{Back-end:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
-                \item \textbf{DevOps:} Docker, Git, GitLab.
-            \end{itemize}
-            \vspace{0.01cm} % Space between sections
+            \item Developed web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, an image gallery, a chatbot, and the generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end, and DevOps, as well as some agile methodologies principles.
+            \vspace{0.6cm} % Space between sections
         \end{itemize}
     \resumeSubHeadingListEnd
 
@@ -207,14 +185,14 @@ Passionate about learning, creating things, and sharing knowledge, both in the f
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Bachelor of Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
+        {B.S. Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
         {Federal University of Ceará (UFC)}{\faMapMarker \hspace{0.1cm} Crateús, CE}
         \begin{itemize}
             \item \textbf{Scholarships}
                 \begin{itemize}
                     \resumeScholarship
                     {Program for Beginning Teachers:}{}
-                    {Academic mentoring for IT and engineering students (C and Python).}{}
+                    {Academic mentoring for IT and engineering students using C and Python.}{}
             
                     \resumeScholarship
                     {Program of Academic Initiation:}{}
@@ -229,7 +207,7 @@ Passionate about learning, creating things, and sharing knowledge, both in the f
                 \begin{itemize}
                     \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
                 \end{itemize}
-                \vspace{0.05cm}
+                \vspace{0.6cm}
         \end{itemize}
     \resumeSubHeadingListEnd
 
@@ -237,31 +215,32 @@ Passionate about learning, creating things, and sharing knowledge, both in the f
 \section{\faComments \hspace{0.2cm} \Large Languages}
 
 \begin{tabular}{c c c c}
-    \textbf{Portuguese:} Native & \hspace{2cm}
-    \textbf{English:} C1 Advanced & \hspace{2cm}
-    \textbf{Spanish:} Basic & \hspace{2cm}
-    \textbf{French:} Basic
+    \textbf{Portuguese:} Native & \hspace{0.5cm}
+    \textbf{English:} B2 Upper Intermediate & \hspace{0.5cm}
+    \textbf{Spanish:} A2 Elementary & \hspace{0.5cm}
+    \textbf{French:} A1 Beginner
 \end{tabular}
 
 % \vspace{0.2cm} % Space between sections
 
 %--------SKILLS------------
-\section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
+\section{\faPuzzlePiece \hspace{0.2cm} \Large Skills \& Interests}
 
-    Main knowledge acquired while working as a developer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
+    Knowledge acquired while working as a software engineer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
         \resumeSubItem {Programming Languages:}{JavaScript, Kotlin, Dart, Java, C++, Python, Processing, C.}
         \resumeSubItem {Front-end:}{HTML, CSS, ReactJS, Material UI, Styled Components, TypeScript, Bootstrap.}
-        \resumeSubItem {Design:}{UI/UX, Figma, Adobe XD, Photoshop, Inkscape, Blender.}
-        \resumeSubItem {Mobile:}{Flutter, Android, Retrofit, Realm.}
+        \resumeSubItem {Design:}{UI/UX, Figma, Adobe XD, Photoshop, Inkscape, Blender, Balsamiq.}
+        \resumeSubItem {Mobile:}{Flutter, React Native, Android, Retrofit, Realm.}
         \resumeSubItem {Back-end:}{Spring Framework, AWS, Firebase, Node.js, PostgreSQL, JWT, Express, Sequelize, MySQL.}
-        \resumeSubItem {DevOps:}{GitHub, Azure, Docker, GitLab.}
-        \resumeSubItem {Operating Systems:}{Linux, Windows.}
-        \resumeSubItem {Tools:}{Git, IntelliJ IDEA, Visual Studio Code, DBeaver, Postman, Insomnia, Microsoft Office.}
+        \resumeSubItem {Testing:} {React Testing Library, Cypress, MockK.}
+        \resumeSubItem {DevOps:}{Git, GitHub, CircleCI, Docker, Azure, GitLab.}
+        \resumeSubItem {Tools:}{Visual Studio Code, IntelliJ IDEA, DBeaver, Postman, Microsoft Office.}
+        \resumeSubItem {Subjects:}{Software Architecture, Test-Driven Development, Domain-Driven Design, Data Structures, Design Patterns.}
         \resumeSubItem {Soft Skills:}{Communication, teamwork, organization, creativity, critical thinking.}
         
-        \vspace{0.3cm} % Space between section
+        \vspace{0.8cm} % Space between section
     \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
@@ -286,58 +265,33 @@ Passionate about learning, creating things, and sharing knowledge, both in the f
                 \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
                 \item \textbf{Fanzines:} Electronic publication of poems. \href{https://issuu.com/daniel.brito/}{\scriptsize \faExternalLink}
                 
-                \vspace{0.1cm} % Space between sections
+                \vspace{0.6cm} % Space between sections
             \end{itemize}
-    \resumeSubHeadingListEnd
-
-%-----------WORKSHOPS-----------------
-\section{\faUsers \hspace{0.2cm} \Large Workshops}
-
-    \resumeSubHeadingListStart
-        \resumeWorkshops
-            {Fire Tasks - A nice task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
-            {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{}
-        \vspace{0.15cm} % Space between sections
-    \resumeSubHeadingListEnd
-    
-%-----------CERTIFICATIONS-----------------
-\section{\faCertificate \hspace{0.2cm} \Large Certifications}
-
-    \resumeSubHeadingListStart
-        \resumeCertifications
-            {Responsive Web Design:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
-            {Basics of HTML and CSS. Best practices for accessibility. Responsive design principles. \href{https://www.freecodecamp.org/certification/danielbrito/responsive-web-design}{\scriptsize \faExternalLink}}{}
-            
-        \resumeCertifications
-            {JavaScript Algorithms and Data Structures:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
-            {Fundamentals of JavaScript. Object-Oriented and Functional Programming. \href{https://www.freecodecamp.org/certification/danielbrito/javascript-algorithms-and-data-structures}{\scriptsize \faExternalLink}}{}
-            
-            \vspace{0.1cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
         \resumeSubItem{Champion:}
-        {Hackathon HackPI Ceará, promoted by the Federal University of Ceará and the State Education Department along with the University of São Paulo.}
+        {Hackathon HackPI Ceará, promoted by the Federal University of Ceará (UFC) and the State Education Department (SEDUC) along with the University of São Paulo (USP).}
         
         \vspace{0.2cm}
         
         \resumeSubItem{First Place:}
-        {Hackathon FIT-ON, promoted during the Innovation and Technology Forum at the Federal University of Ceará.}
+        {Hackathon FIT-ON, promoted during the Innovation and Technology Forum at the Federal University of Ceará (UFC).}
         
         \vspace{0.2cm}
         
         \resumeSubItem{Best Work:}
-        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during University Meetings at the Federal University of Ceará.}
+        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the University Meetings at the Federal University of Ceará (UFC).}
         
-        \vspace{0.3cm}
+        \vspace{0.8cm}
     \resumeSubHeadingListEnd
 
 %-----------OTHER INTERESTS-----------------
-\section{\faThumbsUp \hspace{0.2cm} \Large Other Interests}
+\section{\faThumbsUp \hspace{0.2cm} \Large Hobbies}
 
-    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, sports, music, cinema, social activism, travelling, researching, blogging.
+    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, calisthenics, running, skateboarding, cycling, music, cinema, traveling, researching, and blogging.
   
 %-------------------------------------------
 \end{document}
