Update info and structure

--- a/resume.tex
+++ b/resume.tex
@@ -132,16 +132,17 @@
     \faPaperPlane{\hspace{0.2cm}\href{https://t.me/danielhbrito}{danielhbrito}}
 \end{tabular}
 
-\vspace{0.7cm} % Space between sections
+\vspace{0.5cm} % Space between sections
 
 % Justifying all the content:
 \justify
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Software engineer with \texttt{+}3 years of experience, passionate about challenges that involve learning, creating things, and sharing knowledge, both in the fields of Art and Technology. Currently, focusing on usability and front-end development of web and mobile applications but following the path of a full-stack professional.
 
-\vspace{0.6cm} % Space between sections
+Software engineer with 3\texttt{+} years of experience, passionate about challenges that involve learning, sharing knowledge, and creating things in the fields of Art and Technology. Currently, following the path of a full-stack professional as a consultant, but nurturing a greater interest in the front-end development of web and mobile applications.
+
+\vspace{0.3cm} % Space between sections
 
 %-----------EXPERIENCE-----------------
 \section{\faBriefcase \hspace{0.2cm} \Large Experience}
@@ -163,7 +164,7 @@ Software engineer with \texttt{+}3 years of experience, passionate about challen
         {Laboratory of Studies and Research in Social Economics (LEPES/USP)}{\faMapMarker \hspace{0.1cm} Ribeirão Preto, SP - Remote}
         
         \begin{itemize}
-            \item Developed a web platform addressing the issue of ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood, performing data analysis from CSV files and plotting charts with more understandable results.
+            \item Developed a web platform addressing the issue of ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood", performing data analysis from CSV files and plotting charts with more understandable results to help identify and implement public policy programs.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -176,9 +177,43 @@ Software engineer with \texttt{+}3 years of experience, passionate about challen
         
         \begin{itemize}
             \item Developed web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, an image gallery, a chatbot, and the generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end, and DevOps, as well as some agile methodologies principles.
-            \vspace{0.6cm} % Space between sections
         \end{itemize}
+
+        \vspace{0.1cm} % Space between sections
     \resumeSubHeadingListEnd
+
+%--------SKILLS------------
+\section{\faPuzzlePiece \hspace{0.2cm} \Large Skills \& Interests}
+
+    Knowledge acquired while working as a software engineer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
+    
+    \resumeSubHeadingListStart
+        \resumeSubItem {Programming Languages:}{\textit{JavaScript}, \textit{Kotlin}, Dart, Java, C++, Python, Processing, C.}
+        \resumeSubItem {Front-end:}{\textit{HTML}, \textit{CSS}, \textit{ReactJS}, \textit{TypeScript}, Material UI, Styled Components, Bootstrap.}
+        \resumeSubItem {Design:}{\textit{Figma}, \textit{Photoshop}, Adobe XD, Inkscape, Blender, Balsamiq.}
+        \resumeSubItem {Mobile:}{Flutter, React Native, Android, Retrofit, Realm.}
+        \resumeSubItem {Back-end:}{\textit{Spring Framework}, \textit{AWS}, \textit{Kafka}, \textit{Flyway}, \textit{Jackson}, \textit{GraphQL}, \textit{PostgreSQL}, \textit{JWT}, Firebase, NodeJS.}
+        \resumeSubItem {Testing:} {\textit{JUnit}, \textit{WireMock}, \textit{AssertJ}, \textit{MockK}, \textit{SonarQube}, \textit{Localstack}, \textit{React Testing Library}, Cypress.}
+        \resumeSubItem {Monitoring:} {\textit{Datadog}, \textit{Kibana}, \textit{Amazon CloudWatch}.}        
+        \resumeSubItem {DevOps:}{\textit{Git}, \textit{GitHub}, \textit{CircleCI}, \textit{Docker}, Azure, GitLab.}
+        \resumeSubItem {Tools:}{\textit{Visual Studio Code}, \textit{IntelliJ IDEA}, \textit{DBeaver}, \textit{Postman}, Microsoft Office.}
+        \resumeSubItem {Subjects:}{\textit{Software Architecture}, \textit{TDD}, \textit{DDD}, \textit{Data Structures}, \textit{Design Patterns}, UI/UX.}
+        \resumeSubItem {Soft Skills:}{\textit{Communication}, \textit{teamwork}, \textit{organization}, \textit{creativity}, \textit{critical thinking}.}
+        
+        \vspace{0.6cm} % Space between section
+    \resumeSubHeadingListEnd
+
+%--------LANGUAGES------------
+\section{\faComments \hspace{0.2cm} \Large Languages}
+
+\begin{tabular}{c c c c}
+    \textbf{Portuguese:} Native & \hspace{0.5cm}
+    \textbf{English:} B2 Upper Intermediate & \hspace{0.5cm}
+    \textbf{Spanish:} A2 Elementary & \hspace{0.5cm}
+    \textbf{French:} A1 Beginner
+\end{tabular}
+
+% \vspace{0.7cm} % Space between sections
 
 %-----------EDUCATION-----------------
 \section{\faGraduationCap \hspace{0.2cm} \Large Education}
@@ -197,6 +232,10 @@ Software engineer with \texttt{+}3 years of experience, passionate about challen
                     \resumeScholarship
                     {Program of Academic Initiation:}{}
                     {Practical studies of 3D modeling and Virtual Reality using Blender.}{}
+
+                    \resumeScholarship
+                    {Program of Academic Initiation:}{}
+                    {Front-end development of educational platform using Semantic UI and AngularJS.}{}
                 \end{itemize}
         \end{itemize}
         
@@ -206,41 +245,11 @@ Software engineer with \texttt{+}3 years of experience, passionate about challen
             \item \textbf{Volunteer}
                 \begin{itemize}
                     \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
+                    \item \textbf{Fire Tasks:} Workshop to build a task manager with ReactJS and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}
                 \end{itemize}
-                \vspace{0.6cm}
         \end{itemize}
-    \resumeSubHeadingListEnd
 
-%--------LANGUAGES------------
-\section{\faComments \hspace{0.2cm} \Large Languages}
-
-\begin{tabular}{c c c c}
-    \textbf{Portuguese:} Native & \hspace{0.5cm}
-    \textbf{English:} B2 Upper Intermediate & \hspace{0.5cm}
-    \textbf{Spanish:} A2 Elementary & \hspace{0.5cm}
-    \textbf{French:} A1 Beginner
-\end{tabular}
-
-% \vspace{0.2cm} % Space between sections
-
-%--------SKILLS------------
-\section{\faPuzzlePiece \hspace{0.2cm} \Large Skills \& Interests}
-
-    Knowledge acquired while working as a software engineer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
-    
-    \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{JavaScript, Kotlin, Dart, Java, C++, Python, Processing, C.}
-        \resumeSubItem {Front-end:}{HTML, CSS, ReactJS, Material UI, Styled Components, TypeScript, Bootstrap.}
-        \resumeSubItem {Design:}{UI/UX, Figma, Adobe XD, Photoshop, Inkscape, Blender, Balsamiq.}
-        \resumeSubItem {Mobile:}{Flutter, React Native, Android, Retrofit, Realm.}
-        \resumeSubItem {Back-end:}{Spring Framework, AWS, Firebase, Node.js, PostgreSQL, JWT, Express, Sequelize, MySQL.}
-        \resumeSubItem {Testing:} {React Testing Library, Cypress, MockK.}
-        \resumeSubItem {DevOps:}{Git, GitHub, CircleCI, Docker, Azure, GitLab.}
-        \resumeSubItem {Tools:}{Visual Studio Code, IntelliJ IDEA, DBeaver, Postman, Microsoft Office.}
-        \resumeSubItem {Subjects:}{Software Architecture, Test-Driven Development, Domain-Driven Design, Data Structures, Design Patterns.}
-        \resumeSubItem {Soft Skills:}{Communication, teamwork, organization, creativity, critical thinking.}
-        
-        \vspace{0.8cm} % Space between section
+        \vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
@@ -249,7 +258,7 @@ Software engineer with \texttt{+}3 years of experience, passionate about challen
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Android app to help students share housing, built with Java, Google Maps, and Firebase. \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Dissertation:} Procedural modeling with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using p5.js and Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
             \end{itemize}
@@ -264,34 +273,31 @@ Software engineer with \texttt{+}3 years of experience, passionate about challen
             \begin{itemize}
                 \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
                 \item \textbf{Fanzines:} Electronic publication of poems. \href{https://issuu.com/daniel.brito/}{\scriptsize \faExternalLink}
-                
-                \vspace{0.6cm} % Space between sections
             \end{itemize}
+
+            \vspace{0.1cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
-        \resumeSubItem{Champion:}
-        {Hackathon HackPI Ceará, promoted by the Federal University of Ceará (UFC) and the State Education Department (SEDUC) along with the University of São Paulo (USP).}
+        \resumeSubItem{Champion - HackPI Ceará:}{Hackathon promoted by the Federal University of Ceará (UFC) and the State Education Department (SEDUC) along with the University of São Paulo (USP), where the participants should think of ways to address the issue of ``enhancing the use and interpretation of data''.}
         
         \vspace{0.2cm}
         
-        \resumeSubItem{First Place:}
-        {Hackathon FIT-ON, promoted during the Innovation and Technology Forum at the Federal University of Ceará (UFC).}
+        \resumeSubItem{First Place - FIT.ON:}{Hackathon promoted by the Federal University of Ceará (UFC) during the Innovation and Technology Forum, where the participants should think of solutions to connect small farmers to the market.}
         
         \vspace{0.2cm}
         
-        \resumeSubItem{Best Work:}
-        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the University Meetings at the Federal University of Ceará (UFC).}
+        \resumeSubItem{Best IT Work - University Meetings:}{Project ``Practical studies of 3D modeling and Virtual Reality using Blender'', showing the application of these concepts in digital art, animation, architecture, and game development.}
         
-        \vspace{0.8cm}
+        \vspace{0.5cm}
     \resumeSubHeadingListEnd
 
 %-----------OTHER INTERESTS-----------------
 \section{\faThumbsUp \hspace{0.2cm} \Large Hobbies}
 
-    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, calisthenics, running, skateboarding, cycling, music, cinema, traveling, researching, and blogging.
+    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, calisthenics, running, skateboarding, cycling, music, gaming, cinema, traveling, researching, and blogging.
   
 %-------------------------------------------
 \end{document}
