--- a/resume.tex
+++ b/resume.tex
@@ -140,7 +140,7 @@
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
 
-Software engineer with 3\texttt{+} years of experience, passionate about challenges that involve learning, sharing knowledge, and creating things in the fields of Art and Technology. Currently, following the path of a full-stack professional as a consultant, but nurturing a greater interest in the front-end development of web and mobile applications.
+Software engineer with 3\texttt{+} years of experience, passionate about challenges that involve learning, sharing knowledge, and creating things, both in the fields of Art and Technology. Currently, having a greater interest in topics related to Software Architecture.
 
 \vspace{0.3cm} % Space between sections
 
@@ -149,10 +149,10 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Software Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
-        {OSF Digital}{\faMapMarker \hspace{0.1cm} Quixadá, CE - Remote}
+        {Software Engineer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
+        {OSF Digital}{\faMapMarker \hspace{0.1cm} Québec, CA - Remote}
         \begin{itemize}
-            \item Development of web and mobile applications for big companies and startups such as Caixa, Porto Seguro, and Creditas, mainly related to finance.
+            \item Development of web and mobile applications within high-performance teams from big companies and startups such as Caixa, Porto Seguro, and Creditas, mainly related to finance and innovation.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -164,7 +164,7 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
         {Laboratory of Studies and Research in Social Economics (LEPES/USP)}{\faMapMarker \hspace{0.1cm} Ribeirão Preto, SP - Remote}
         
         \begin{itemize}
-            \item Developed a web platform addressing the issue of ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood", performing data analysis from CSV files and plotting charts with more understandable results to help identify and implement public policy programs.
+            \item Developed a web platform addressing the issue ``enhancing the use and interpretation of data'' proposed during the HackPI - Hackathon for the First Childhood, performing data analysis from CSV files and plotting charts with more understandable results to help identify and implement public policy programs.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -176,7 +176,7 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
         {ASTEF Foundation}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
         
         \begin{itemize}
-            \item Developed web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, an image gallery, a chatbot, and the generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end, and DevOps, as well as some agile methodologies principles.
+            \item Developed web and mobile applications to optimize the patient admission process at Pró-Hemoce Institute. Some features include user management, notifications, an image gallery, a chatbot, and the generation of reports. Despite the affinity to learn front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end, and DevOps, as well as some agile methodologies principles.
         \end{itemize}
 
         \vspace{0.1cm} % Space between sections
@@ -188,17 +188,17 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
     Knowledge acquired while working as a software engineer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{\textit{JavaScript}, \textit{Kotlin}, Dart, Java, C++, Python, Processing, C.}
+        \resumeSubItem {Programming Languages:}{\textit{Kotlin}, \textit{JavaScript}, Dart, Java, C++, Python, Processing, C.}
         \resumeSubItem {Front-end:}{\textit{HTML}, \textit{CSS}, \textit{ReactJS}, \textit{TypeScript}, Material UI, Styled Components, Bootstrap.}
-        \resumeSubItem {Design:}{\textit{Figma}, \textit{Photoshop}, Adobe XD, Inkscape, Blender, Balsamiq.}
-        \resumeSubItem {Mobile:}{Flutter, React Native, Android, Retrofit, Realm.}
-        \resumeSubItem {Back-end:}{\textit{Spring Framework}, \textit{AWS}, \textit{Kafka}, \textit{Flyway}, \textit{Jackson}, \textit{GraphQL}, \textit{PostgreSQL}, \textit{JWT}, Firebase, NodeJS.}
+        \resumeSubItem {Back-end:}{\textit{Spring Framework}, \textit{AWS}, \textit{Kafka}, \textit{Flyway}, \textit{GraphQL}, \textit{PostgreSQL}, \textit{JWT}, \textit{Swagger}, Firebase, NodeJS.}
+        \resumeSubItem {Mobile:}{Flutter, React Native, Android.}
         \resumeSubItem {Testing:} {\textit{JUnit}, \textit{WireMock}, \textit{AssertJ}, \textit{MockK}, \textit{SonarQube}, \textit{Localstack}, \textit{React Testing Library}, Cypress.}
-        \resumeSubItem {Monitoring:} {\textit{Datadog}, \textit{Kibana}, \textit{Amazon CloudWatch}.}        
-        \resumeSubItem {DevOps:}{\textit{Git}, \textit{GitHub}, \textit{CircleCI}, \textit{Docker}, Azure, GitLab.}
-        \resumeSubItem {Tools:}{\textit{Visual Studio Code}, \textit{IntelliJ IDEA}, \textit{DBeaver}, \textit{Postman}, Microsoft Office.}
-        \resumeSubItem {Subjects:}{\textit{Software Architecture}, \textit{TDD}, \textit{DDD}, \textit{Data Structures}, \textit{Design Patterns}, UI/UX.}
-        \resumeSubItem {Soft Skills:}{\textit{Communication}, \textit{teamwork}, \textit{organization}, \textit{creativity}, \textit{critical thinking}.}
+        \resumeSubItem {Monitoring:} {\textit{Datadog}, \textit{Opsgenie}, \textit{Amazon CloudWatch}, New Relic, Kibana.}        
+        \resumeSubItem {DevOps:}{\textit{Git}, \textit{GitHub}, \textit{Docker}, CircleCI, Azure, GitLab.}
+        \resumeSubItem {Tools:}{\textit{IntelliJ IDEA}, \textit{VS Code}, \textit{DBeaver}, \textit{Postman}, \textit{Jira}, \textit{Redash}, \textit{Split.io}.}
+        \resumeSubItem {Design:}{Figma, Photoshop, Adobe XD, Inkscape, Blender, Balsamiq.}
+        \resumeSubItem {Subjects:}{\textit{Software Architecture}, \textit{Design Patterns}, \textit{TDD}, \textit{DDD}, \textit{Data Structures}, \textit{Kanban}, Scrum, UI/UX.}
+        \resumeSubItem {Soft Skills:}{\textit{Communication}, \textit{teamwork}, \textit{organization}, \textit{time management}, \textit{creativity}, \textit{critical thinking}.}
         
         \vspace{0.6cm} % Space between section
     \resumeSubHeadingListEnd
@@ -220,7 +220,7 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {B.S. Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
+        {B.S. Computer Science \href{http://lattes.cnpq.br/6587136026055239}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} 2017 - 2021}
         {Federal University of Ceará (UFC)}{\faMapMarker \hspace{0.1cm} Crateús, CE}
         \begin{itemize}
             \item \textbf{Scholarships}
@@ -272,7 +272,7 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
         \resumeSubItem{Arts}{}
             \begin{itemize}
                 \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
-                \item \textbf{Fanzines:} Electronic publication of poems. \href{https://issuu.com/daniel.brito/}{\scriptsize \faExternalLink}
+                \item \textbf{Fanzines:} Electronic publication of poems. \href{https://drive.google.com/drive/folders/0BwdGPIUP6mG3dEl6cmRvWGJ6TzQ}{\scriptsize \faExternalLink}
             \end{itemize}
 
             \vspace{0.1cm} % Space between sections
@@ -281,15 +281,19 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
-        \resumeSubItem{Champion - HackPI Ceará:}{Hackathon promoted by the Federal University of Ceará (UFC) and the State Education Department (SEDUC) along with the University of São Paulo (USP), where the participants should think of ways to address the issue of ``enhancing the use and interpretation of data''.}
+        \resumeSubItem{CEO Awards - Rising Star:}{Recognition for the remarkable work performed at OSF Digital as a Software Developer.}
+        
+        \vspace{-0.2cm}
+        
+        \resumeSubItem{Champion at HackPI Ceará:}{Hackathon promoted by the Federal University of Ceará (UFC) and the State Education Department (SEDUC) along with the University of São Paulo (USP), in which the participants should think of ways to address the issue of ``enhancing the use and interpretation of data''.}
         
         \vspace{0.2cm}
         
-        \resumeSubItem{First Place - FIT.ON:}{Hackathon promoted by the Federal University of Ceará (UFC) during the Innovation and Technology Forum, where the participants should think of solutions to connect small farmers to the market.}
+        \resumeSubItem{First Place at FIT.ON:}{Hackathon promoted by the Federal University of Ceará (UFC) during the Innovation and Technology Forum, in which the participants should think of solutions to connect small farmers to the market.}
         
         \vspace{0.2cm}
         
-        \resumeSubItem{Best IT Work - University Meetings:}{Project ``Practical studies of 3D modeling and Virtual Reality using Blender'', showing the application of these concepts in digital art, animation, architecture, and game development.}
+        \resumeSubItem{Best IT Work at University Meetings:}{Project ``Practical studies of 3D modeling and Virtual Reality using Blender'', which shows application of these concepts in digital art, animation, architecture, and game development.}
         
         \vspace{0.5cm}
     \resumeSubHeadingListEnd
