--- a/resume.tex
+++ b/resume.tex
@@ -140,7 +140,7 @@
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
 
-Software engineer with 3\texttt{+} years of experience, passionate about challenges that involve learning, sharing knowledge, and creating things, both in the fields of Art and Technology. Currently, having a greater interest in topics related to Software Architecture.
+Software engineer with 4\texttt{+} years of experience, passionate about challenges that involve learning, sharing knowledge, and creating things, both in the fields of Art and Technology. Currently, having a greater interest in topics related to Software Architecture.
 
 \vspace{0.3cm} % Space between sections
 
@@ -152,7 +152,7 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
         {Software Engineer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
         {OSF Digital}{\faMapMarker \hspace{0.1cm} Québec, CA - Remote}
         \begin{itemize}
-            \item Development of web and mobile applications within high-performance teams from big companies and startups such as Caixa, Porto Seguro, and Creditas, mainly related to finance and innovation.
+            \item Development of web and mobile applications within high-performing teams from big companies and startups such as Caixa, Porto Seguro, and Creditas, mainly related to finance and innovation.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -185,19 +185,19 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
 %--------SKILLS------------
 \section{\faPuzzlePiece \hspace{0.2cm} \Large Skills \& Interests}
 
-    Knowledge acquired while working as a software engineer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
+    Knowledge acquired while \textit{working as a software engineer}, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{\textit{Kotlin}, \textit{JavaScript}, Dart, Java, C++, Python, Processing, C.}
-        \resumeSubItem {Front-end:}{\textit{HTML}, \textit{CSS}, \textit{ReactJS}, \textit{TypeScript}, Material UI, Styled Components, Bootstrap.}
-        \resumeSubItem {Back-end:}{\textit{Spring Framework}, \textit{AWS}, \textit{Kafka}, \textit{Flyway}, \textit{GraphQL}, \textit{PostgreSQL}, \textit{JWT}, \textit{Swagger}, Firebase, NodeJS.}
-        \resumeSubItem {Mobile:}{Flutter, React Native, Android.}
-        \resumeSubItem {Testing:} {\textit{JUnit}, \textit{WireMock}, \textit{AssertJ}, \textit{MockK}, \textit{SonarQube}, \textit{Localstack}, \textit{React Testing Library}, Cypress.}
+        \resumeSubItem {Programming Languages:}{\textit{Kotlin}, \textit{JavaScript/TypeScript}, Java, C\texttt{++}, Python, Dart, Processing, C.}
+        \resumeSubItem {Front-end:}{\textit{HTML}, \textit{CSS}, \textit{ReactJS}, Styled Components, Material UI, Bootstrap.}
+        \resumeSubItem {Back-end:}{\textit{Spring Framework}, \textit{AWS}, \textit{Kafka}, \textit{Flyway}, \textit{GraphQL}, \textit{PostgreSQL}, \textit{JWT}, \textit{NodeJS}, Firebase.}
+        \resumeSubItem {Mobile:}{Android, Flutter, React Native.}
+        \resumeSubItem {Testing:} {\textit{JUnit}, \textit{AssertJ}, \textit{MockK}, \textit{WireMock}, \textit{Localstack}, \textit{React Testing Library}, \textit{Jest}, \textit{SonarQube}, Cypress.}
         \resumeSubItem {Monitoring:} {\textit{Datadog}, \textit{Opsgenie}, \textit{Amazon CloudWatch}, New Relic, Kibana.}        
         \resumeSubItem {DevOps:}{\textit{Git}, \textit{GitHub}, \textit{Docker}, CircleCI, Azure, GitLab.}
-        \resumeSubItem {Tools:}{\textit{IntelliJ IDEA}, \textit{VS Code}, \textit{DBeaver}, \textit{Postman}, \textit{Jira}, \textit{Redash}, \textit{Split.io}.}
+        \resumeSubItem {Tools:}{\textit{IntelliJ IDEA}, \textit{VS Code}, \textit{DBeaver}, \textit{Postman}, \textit{Jira}, \textit{Redash}, \textit{Flagsmith}, Split.io.}
         \resumeSubItem {Design:}{Figma, Photoshop, Adobe XD, Inkscape, Blender, Balsamiq.}
-        \resumeSubItem {Subjects:}{\textit{Software Architecture}, \textit{Design Patterns}, \textit{TDD}, \textit{DDD}, \textit{Data Structures}, \textit{Kanban}, Scrum, UI/UX.}
+        \resumeSubItem {Subjects:}{\textit{Software Architecture}, \textit{Design Patterns}, \textit{TDD}, \textit{DDD}, \textit{Data Structures}, \textit{Kanban}, \textit{UML}, Scrum, UI/UX.}
         \resumeSubItem {Soft Skills:}{\textit{Communication}, \textit{teamwork}, \textit{organization}, \textit{time management}, \textit{creativity}, \textit{critical thinking}.}
         
         \vspace{0.6cm} % Space between section
@@ -246,6 +246,7 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
                 \begin{itemize}
                     \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
                     \item \textbf{Fire Tasks:} Workshop to build a task manager with ReactJS and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}
+                    \item \textbf{Chess Club:} Helping the students to develop their mental skills.
                 \end{itemize}
         \end{itemize}
 
@@ -258,14 +259,14 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Android app to help students share housing, built with Java, Google Maps, and Firebase. \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
-                \item \textbf{Dissertation:} Procedural modeling with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Android app to help students share housing, built with Java, Google Maps, and Firebase. \href{https://youtu.be/9wHZYrn7aEE}{\scriptsize \faExternalLink}
+                \item \textbf{Dissertation:} Procedural modeling based on Selection Expressions with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using p5.js and Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
             \begin{itemize}
-                \item \textbf{sTuring:} Scientific divulgation on topics related to Computing. \href{https://www.instagram.com/sturing.compsci/}{\scriptsize \faExternalLink}
+                \item \textbf{sTuring:} Scientific divulgation of topics related to Computing. \href{https://www.instagram.com/sturing.compsci/}{\scriptsize \faExternalLink}
                 \item \textbf{YouTube Channel:}  Programming tutorials for beginners. \href{https://www.youtube.com/channel/UC4y3uq1d7MKDYs1LbI44Vng}{\scriptsize \faExternalLink}
             \end{itemize}
             
@@ -301,7 +302,6 @@ Software engineer with 3\texttt{+} years of experience, passionate about challen
 %-----------OTHER INTERESTS-----------------
 \section{\faThumbsUp \hspace{0.2cm} \Large Hobbies}
 
-    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, calisthenics, running, skateboarding, cycling, music, gaming, cinema, traveling, researching, and blogging.
-  
+    Generative design, art, astronomy, philosophy, literature, mathematics, history, poetry, music, cinema, chess, calisthenics, running, skateboarding, cycling, gaming, traveling, researching, and blogging.
 %-------------------------------------------
 \end{document}
